<resources>
    <string name="app_name">InkSteel</string>
    <string name="api_key">AIzaSyCuBkUIdyvqanz381pa3YoYrJ7uj21AEBg</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="user_s_profile_picture">user\'s profile picture</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gallery">gallery</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="not_a_member_register">Not a member? Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="send_a_message">Send a message</string>
    <string name="app_logo">app logo</string>
    <string name="add_image">add image</string>
    <string name="add_description_if_you_like_20_chars">Add short description</string>
    <string name="click_to_explore_again"><![CDATA[Click to explore again ->]]></string>
    <string name="friends">Friends</string>
    <string name="log_out">Log out</string>
    <string name="last_message">Last Message</string>
    <string name="_16_34_1_nov">16:34, 1 Nov</string>
    <string name="user_city">UserCity:</string>
    <string name="textview">TextView</string>
    <string name="reacted_with">reacted with</string>
    <string name="studioname">StudioName</string>
    <string name="read_more">READ MORE</string>
    <string name="studio_image">Studio image</string>
    <string name="message">Message</string>
    <string name="back">BACK</string>
    <string name="warning_msg">WARNING MESSAGE</string>
    <string name="user_name">Username:</string>
    <string name="do_you_want">Do you want to delete the image?</string>
    <string name="like">like</string>
    <string name="blush">blush</string>
    <string name="devil">devil</string>
    <string name="dazed">dazed</string>
    <string name="email_dot">Email:</string>
    <string name="username_dot">Username:</string>
    <string name="city_dot">City:</string>
    <string name="age_dot">Age:</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="pass_short">Password too short! Minimum length - 6 characters.</string>
    <string name="pass_not_match">Passwords don\'t match!</string>
    <string name="feed">FEED</string>
    <string name="explore">EXPLORE</string>
    <string name="studios">STUDIOS</string>
    <string name="chat_fragment">CHAT</string>
    <string name="tel">tel:</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="reply">Reply</string>
    <string name="new_message">New Message from</string>
    <string name="channel_id">messages_chanel</string>
    <string name="reply_hint">Reply to the message</string>
    <string name="send_button">Send button</string>
    <string name="user_profile_image">user profile image</string>
    <string name="open_now">OPEN NOW</string>
    <string name="call">call</string>
    <string name="browse">browse</string>
    <string name="post_image">post image</string>
    <string name="image_full">image_full</string>
    <string name="triangle">triangle</string>
    <string name="collapse">collapse</string>
    <string name="reaction">reaction</string>
    <string name="invalid_pass">Invalid password!</string>
    <string name="image_text_permission">Permission is necessary to get images from your device!</string>
    <string name="no_studios">There are no studios available</string>
</resources>
