<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/user_s_profile_picture"
        android:src="@drawable/ic_add"/>

    <EditText
        android:id="@+id/qwerty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom|center"
        android:hint="@string/username"
        android:fontFamily="cursive"
        android:textSize="34sp"
        android:textColor="@color/colorAccent"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/user_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City"
        android:fontFamily="cursive"
        android:textSize="34sp"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="64dp"
        android:gravity="bottom|center"
        android:layout_marginRight="64dp"/>

    <EditText
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center"
        android:hint="@string/age"
        android:fontFamily="cursive"
        android:textSize="34sp"
        android:textColor="@color/colorAccent"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/button_save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/btn_border_style"
        android:text="@string/save"/>

</LinearLayout>
