<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ink_steel.inksteel.fragments.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragment_login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/text_input_layout"
        app:layout_constraintRight_toRightOf="@+id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/fragment_login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        app:layout_constraintLeft_toLeftOf="@+id/text_input_layout1"
        app:layout_constraintRight_toRightOf="@+id/text_input_layout1"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout1" />

    <Button
        android:id="@+id/fragment_login_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_login_btn"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_register_tv" />

    <TextView
        android:id="@+id/fragment_login_register_tv"
        style="@style/FontText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_a_member_register"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_login_btn"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_btn" />

</android.support.constraint.ConstraintLayout>
