<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/fragment_studio_info_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_studio_info_iv" />

    <TextView
        android:id="@+id/fragment_studio_info_name_tv"
        style="@style/FontText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_studio_info_rb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_studio_info_iv" />

    <TextView
        android:id="@+id/fragment_studio_info_address_tv"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_studio_info_rb"
        app:layout_constraintStart_toStartOf="@+id/fragment_studio_info_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_studio_info_name_tv" />

    <ImageButton
        android:id="@+id/fragment_studio_info_website_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/browse"
        android:scaleType="centerInside"
        android:src="@drawable/ic_earth_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_studio_info_phone_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/fragment_studio_info_phone_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/call"
        android:scaleType="centerInside"
        android:src="@drawable/ic_phone_black_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_studio_info_website_btn"
        app:layout_constraintTop_toTopOf="@+id/fragment_studio_info_website_btn" />

    <RatingBar
        android:id="@+id/fragment_studio_info_rb"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/fbutton_color_sun_flower"
        android:rating="5"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_studio_info_name_tv" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_studio_info_map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tag="google_map_fragment"
        app:layout_constraintBottom_toTopOf="@+id/fragment_studio_info_website_btn"
        app:layout_constraintEnd_toEndOf="@+id/fragment_studio_info_rb"
        app:layout_constraintStart_toStartOf="@+id/fragment_studio_info_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_studio_info_address_tv" />

    <ImageView
        android:id="@+id/fragment_studio_info_iv"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:contentDescription="@string/studio_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tattoo3" />

    <View
        android:id="@+id/view"
        style="?android:attr/dividerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_studio_info_website_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_studio_info_map" />

    <View
        style="?android:attr/dividerVertical"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_studio_info_phone_btn"
        app:layout_constraintEnd_toEndOf="@+id/fragment_studio_info_phone_btn"
        app:layout_constraintStart_toStartOf="@+id/fragment_studio_info_website_btn"
        app:layout_constraintTop_toTopOf="@+id/fragment_studio_info_phone_btn" />

    <View
        style="?android:attr/dividerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_studio_info_map" />

</android.support.constraint.ConstraintLayout>